Added check before each user's input. Added network invocation to the last game state (EndGameState). Translated some prompts to english. RMI connection completed